# vlm-bridge-for-image-captioning

./: .gitignore  README.md  debug_generation.py  main.py  pyproject.toml  test_generation_debug.py  test_model_architecture.py  test_training_strategy.py
config/: training-default.yaml
scripts/: control_vastai_local.sh  setup_vastai_remote.sh
src/vlm_bridge/: __init__.py
src/vlm_bridge/data_pipeline/: __init__.py  cli.py  data_loader.py  load_and_explore.py  split_and_save.py  transform_full_dataset.py
src/vlm_bridge/model_architecture/: __init__.py  bridge_module.py  full_model.py  language_model.py  vision_encoder.py
src/vlm_bridge/training_strategy/: __init__.py  cli.py  core_training_loop.py  test_training.py  training_orchestrator.py  training_setup.py
