[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=65", "wheel"]

[project]
dependencies = [
  "datasets>=2.16.0",
  "torch>=2.0.0",
  "pillow>=9.0.0",
  "transformers>=4.35.0",
  "numpy>=1.21.0",
  "torchvision>=0.22.1",
  "tensorboard>=2.15.0",
  "tqdm>=4.65.0",
  "pytest>=7.0.0",
  "accelerate>=0.25.0",
]
description = "VLM Bridge for Image Captioning - A modular system for training Vision-Language Models with bridge architectures"
name = "vlm-bridge-for-image-captioning"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
vlm-data = "vlm_bridge.data_pipeline.cli:main"
vlm-training = "vlm_bridge.training_strategy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
